--- a/site/css/style.css
+++ b/site/css/style.css
@@ -1,3 +1,164 @@
+@import url(http://fonts.googleapis.com/css?family=Istok+Web);
+@keyframes slidy {
+0% { left: 0%; }
+20% { left: 0%; }
+30% { left: -100%; }
+40% { left: -100%; }
+50% { left: -200%; }
+60% { left: -200%; }
+70% { left: -300%; }
+80% { left: -300%; }
+90% { left: -400%; }
+100% { left: -400%; }
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+body, figure { 
+  margin: 0;
+  background: #fff;
+  font-family: Istok Web, sans-serif;
+  font-weight: 100;
+}
+div#captioned-gallery {
+  width: 100%;
+  overflow: hidden; 
+}
+figure.slider { 
+  position: relative;
+  width: 500%;
+  font-size: 0;
+  transition: 1s;
+  animation: 30s slidy infinite; 
+}
+figure.slider figure { 
+  width: 20%;
+  height: auto;
+  display: inline-block;
+  position: inherit; 
+}
+figure.slider img {
+  width: 100%;
+  height: auto;
+}
+figure.slider figure figcaption { 
+  position: absolute;
+  bottom: 0;
+  background: rgba(0,0,0,0.4);
+  color: #fff;
+  width: 100%;
+  font-size: 3rem;
+  padding: .6rem;
+  padding-left: 50px;
+}
+
+
+/*Eliminamos los margenes y paddings que agrega el navegador por defecto*/
+
+ 
+/*Agregamos margenes inferiores a los parrafos*/
+p {
+  margin-bottom: 20px;
+}
+header {
+  background: rgba(0,0,0,0.3);
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+.contenido {
+  padding-top: 80px;
+}
+
+.wrapper {
+  width: 80%;
+  margin: auto;
+  overflow:hidden;
+}
+
+#pie {
+clear: both;
+
+text-align: center;
+padding: 20px;
+border-top: 2px solid #999999;
+}
+div.piedepa{
+  padding: 18px 20px;
+  background-clip: padding-box;
+  border: 1px solid #172b4e;
+  border-bottom-color: #142647;
+  border-radius: 5px;
+  -webkit-box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 1px rgba(255, 255, 255, 0.3), inset 0 0 1px 1px rgba(255, 255, 255, 0.1), 0 2px 10px rgba(0, 0, 0, 0.5);
+}
+div.mapa_go{
+  
+}
+tr.tb_foot_f1>td, tr.tb_foot_f3>td{
+	text-align: center;
+}
+div.titulo1{
+	height: 100px;
+	background-color: #fff;
+	border-radius: 5px;
+}
+.titulo1>h1{
+	color: #000;
+	text-align: center;
+    position: relative;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+
+
+
+/*  Contenedor De La Galería  */
+.cajaAbanico   {
+  width: 100%;
+  }
+  
+/*  Imágenes Del Abanico */
+  
+#abanico {
+  padding:0; 
+  list-style-type:none; 
+  height:300px; 
+  width:100%; 
+  border-bottom:1px solid #888; 
+  }
+#abanico li {
+  margin: 0 auto; 
+  display: inline-block;
+  width:10%;
+  height:300px; 
+  }
+#abanico li img {
+  height:300px; 
+  width:100%;
+  border:0;
+  }
+#abanico li:hover {
+  background:#eee; 
+  width:30%;
+  border: 2px solid #000;
+  }
+#abanico li:hover img {
+  width:100%;
+  }
+
+
+
+
+
+
+
+
 /* Custom Stylesheet */
 /**
  * Use this file to override Materialize files so you can update
