--- a/site/css/style.css
+++ b/site/css/style.css
@@ -18,7 +18,7 @@
 }
 body, figure { 
   margin: 0;
-  background: #fff;
+  background: #c5cae9;
   font-family: Istok Web, sans-serif;
   font-weight: 100;
 }
@@ -106,7 +106,7 @@ div.titulo1{
 	border-radius: 5px;
 }
 .titulo1>h1{
-	color: #000;
+	color: #fff;
 	text-align: center;
     position: relative;
     top: 50%;
